# alle

./: .dockerignore  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish-docker.yml  publish-pypi.yml  publish.yml  supply-chain.yml
archive/webui/: server.py
archive/webui/webui/: app.js  index.html  styles.css
assets/: README.md  icon.icns
docker/: entrypoint.sh
docs/: api.md  bundle.md  cli-reference.md  declarative-config.md  docker-compose.md  docker.md  getting-started.md  how-it-works.md  openapi.yaml  providers.md  routing.md  security.md  tun-runbook.md  vpn-provider-research.md  web-ui.md
packaging/homebrew/: alle.rb
scripts/: check-web-assets.mjs  container-release-smoke.sh  gen_singbox_checksums.py  install-systemd-smoke.Dockerfile  install-systemd-smoke.sh  install.sh  release-artifact-smoke.sh  update-homebrew-formula.py
scripts/tun-sandbox/: Dockerfile  engine-smoke.sh  gateway-smoke.sh  lib.sh  run.sh  setcap-smoke.sh  smoke.sh
src/alle/: __init__.py  __main__.py  applog.py  backup.py  bundle.py  cli.py  companion.py  constants.py  credentials.py  daemon.py  daemonctl.py  engine.py  fsio.py  geo.py  geodata.py  helper.py  helperctl.py  locations.py  metrics.py  output.py  paths.py  probe.py  proc.py  providers.py  reconnect.py  routes.py  runtime.py  service.py  singbox.py  srs.py  state.py  throughput.py  tracer.py  tray.py  txn.py  upgrade.py  wgconf.py
src/alle/api/: __init__.py  auth.py  server.py
src/alle/assets/: app.js  bundle.js  core.js  dashboard.js  index.html  login.html  login.js  logs.js  style.css  theme-init.js  theme.js
src/alle/tray/: __init__.py  app.py
src/alle/webui/: __init__.py  auth.py  server.py
tests/: _runtime_hygiene.py  conftest.py  test_api_auth.py  test_api_config.py  test_api_server.py  test_applog.py  test_auth_input.py  test_backup.py  test_bundle.py  test_channel_enabled.py  test_cli.py  test_cli_units.py  test_companion.py  test_container_profile.py  test_credentials.py  test_daemon.py  test_daemon_service.py  test_daemonctl.py  test_engine.py  test_engine_config.py  test_entrypoint.py  test_fsio.py  test_gateway_profile.py  test_geo.py  test_geodata.py  test_helper.py  test_homebrew_formula.py  test_install_script.py  test_locations.py  test_metrics.py  test_openapi_contract.py  test_output.py  test_packaging.py  test_paths.py  test_platform.py  test_probe.py  test_proc.py  test_providers.py  test_reconnect.py  test_routes.py  (+22 more)
tests/browser/: a11y.spec.mjs  fixture_server.py  lifetime.spec.mjs  smoke.spec.mjs
tests/browser/support/: fixtures.mjs
