[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alle-proxy"
version = "0.1.3"
description = "A universal VPN client that manages multiple VPN connections with rule-based routing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "zydo" }]
keywords = ["vpn", "sing-box", "nordvpn", "wireguard", "proxy", "gateway"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = ["pyyaml>=6.0", "pycountry>=23.12"]

[project.urls]
Homepage = "https://github.com/zydo/alle"
Issues = "https://github.com/zydo/alle/issues"

[project.scripts]
alle = "alle.cli:main"
alled = "alle.daemon:run_applier"

[tool.hatch.build]
# Keep local-only roadmap notes out of every release artifact (sdist + wheel).
# .gitignore also ignores ROADMAP*.md; this is belt-and-suspenders for builders
# that do not consult VCS ignore rules.
exclude = ["ROADMAP*.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/alle"]
# The dashboard screenshot ships in the sdist so it renders on the PyPI project
# page (PyPI rewrites relative README image paths to files.pythonhosted.org),
# but the Web UI never serves it, so omit it from the installed wheel.
exclude = ["src/alle/assets/webui.png"]

[tool.ruff]
line-length = 88
target-version = "py310"

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/alle"]
