[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "alle-proxy"
version = "0.1.8"
description = "A universal VPN client that manages multiple VPN connections with rule-based routing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "zydo" }]
keywords = ["vpn", "sing-box", "nordvpn", "wireguard", "proxy", "gateway"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = ["pyyaml>=6.0", "pycountry>=23.12"]

# The menu-bar companion is an optional extra: the base package stays CLI-only
# (no GUI deps). `pip install alle-proxy[tray]` adds the v1 rumps tray, macOS
# only. The thin-client core (alle.companion) has no third-party deps and ships
# in the base package so it is always importable/testable.
[project.optional-dependencies]
tray = ["rumps>=0.4; sys_platform == 'darwin'"]

[project.urls]
Homepage = "https://github.com/zydo/alle"
Issues = "https://github.com/zydo/alle/issues"

[project.scripts]
alle = "alle.cli:main"

[project.gui-scripts]
alle-tray = "alle.tray:main"

[tool.hatch.build]
# Keep local-only notes (roadmaps, scratch) out of every release artifact
# (sdist + wheel). .gitignore also ignores .localonly/; this is
# belt-and-suspenders for builders that do not consult VCS ignore rules.
exclude = [".localonly"]

[tool.hatch.build.targets.wheel]
packages = ["src/alle"]
# The README references the dashboard screenshot via an absolute URL, so PyPI
# renders it without needing the file shipped in the distribution. The Web UI
# never serves it, so keep it out of the installed wheel.
exclude = ["src/alle/assets/webui.png"]

[tool.ruff]
line-length = 88
target-version = "py310"

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-cov>=5.0", "hatchling==1.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/alle"]
