[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "alle-proxy"
version = "0.1.9"
description = "A universal VPN client that manages multiple VPN connections with rule-based routing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "zydo" }]
keywords = ["vpn", "sing-box", "nordvpn", "wireguard", "proxy", "gateway"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = ["packaging>=23.2", "pyyaml>=6.0", "pycountry>=23.12"]

[project.urls]
Homepage = "https://github.com/zydo/alle"
Issues = "https://github.com/zydo/alle/issues"

[project.scripts]
alle = "alle.cli:main"

[tool.hatch.build]
# Keep local-only notes (roadmaps, scratch) out of every release artifact
# (sdist + wheel). .gitignore also ignores .localonly/; this is
# belt-and-suspenders for builders that do not consult VCS ignore rules.
exclude = [".localonly"]

[tool.hatch.build.targets.wheel]
packages = ["src/alle"]
# Distribution channels are deliberately headless. Keep the future desktop
# companion sources available to the in-tree test suite and sdist, but never
# put them (or the README-only screenshot) in an installed wheel.
exclude = [
    "src/alle/assets/webui.png",
    "src/alle/companion.py",
    "src/alle/tray.py",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# flake8-bandit (S) is the in-repo Python security scan (dependency scanning
# lives in supply-chain.yml: OSV/Trivy/gitleaks). Existing accepted patterns
# carry per-line noqa with a reason; new code meets the rules or explains.
extend-select = ["S"]
# S603 flags every list-form subprocess call unconditionally — that IS the
# safe (no-shell) form, and alle builds argv from constants/resolved paths.
ignore = ["S603"]

[tool.ruff.lint.per-file-ignores]
# Tests assert (S101) and embed dummy credentials/temp paths by design.
"tests/*" = ["S"]
"scripts/*" = ["S"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hatchling==1.31.0",
    "mypy>=1.11",
]

[tool.mypy]
# Permissive baseline, enforced at zero errors in CI; strictness is ratcheted
# per-module as annotations grow (decided 2026-07-17).
files = ["src/alle"]
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/alle"]
